# SQLAlchemy_with_Alembic

./: README.md  config.ini  my_select.py  pyproject.toml  seed.py
conf/: db.py  models.py
migrations/: env.py
migrations/versions/: d56b663775ac_init.py
